# meetingai-api

./: .env.example  README.md  __init__.py  __main__.py  app.py  app_state.py  http_utils.py  main.py  pyproject.toml
auth/: __init__.py  decorators.py  routes.py
clients/: __init__.py  note_client.py  transcription_client.py  worker_client.py
routes/: __init__.py  dashboard.py  mobile_api.py
services/: __init__.py  ldap_service.py  mobile_auth_service.py
static/: dashboard.css  dashboard.js
templates/: auth_login.html  dashboard.html
